添加健康管理小程序的初始功能，包括首页、服药管理、体检管理、费用管理和数据统计模块。实现主题切换、震动反馈和数据存储功能，更新项目配置文件，优化样式和结构。

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,23 +1,35 @@
 {
-  "libVersion": "2.31.0",
-  "projectname": "health-manager",
-  "condition": {},
-  "setting": {
-    "urlCheck": true,
-    "coverView": false,
-    "lazyloadPlaceholderEnable": false,
-    "skylineRenderEnable": false,
-    "preloadBackgroundData": false,
-    "autoAudits": false,
-    "useApiHook": true,
-    "useApiHostProcess": true,
-    "showShadowRootInWxmlPanel": false,
-    "useStaticServer": false,
-    "useLanDebug": false,
-    "showES6CompileOption": false,
-    "compileHotReLoad": true,
-    "checkInvalidKey": true,
-    "ignoreDevUnusedFiles": true,
-    "bigPackageSizeSupport": false
-  }
+    "libVersion": "3.10.0",
+    "projectname": "health-manager",
+    "condition": {
+        "miniprogram": {
+            "list": [
+                {
+                    "name": "pages/meds/index",
+                    "pathName": "pages/meds/index",
+                    "query": "",
+                    "scene": null,
+                    "launchMode": "default"
+                }
+            ]
+        }
+    },
+    "setting": {
+        "urlCheck": true,
+        "coverView": false,
+        "lazyloadPlaceholderEnable": false,
+        "skylineRenderEnable": false,
+        "preloadBackgroundData": false,
+        "autoAudits": false,
+        "useApiHook": true,
+        "useApiHostProcess": true,
+        "showShadowRootInWxmlPanel": false,
+        "useStaticServer": false,
+        "useLanDebug": false,
+        "showES6CompileOption": false,
+        "compileHotReLoad": true,
+        "checkInvalidKey": true,
+        "ignoreDevUnusedFiles": false,
+        "bigPackageSizeSupport": false
+    }
 }
