优化健康管理小程序的代码结构，重构系统信息获取逻辑，简化页面数据初始化，新增日期和健康评分工具函数，更新相关页面以提升用户体验。

--- a/project.config.json
+++ b/project.config.json
@@ -20,7 +20,7 @@
         "condition": false,
         "swc": false,
         "disableSWC": true,
-        "lazyCodeLoading": false,
+        "lazyCodeLoading": true,
         "ignoreDevUnusedFiles": false,
         "useTypeScript": false,
         "compileHotReLoad": false,
