--- a/app.json
+++ b/app.json
@@ -5,7 +5,8 @@
         "pages/meds/index",
         "pages/checkups/index",
         "pages/expense/index",
-        "pages/stats/index"
+        "pages/stats/index",
+        "pages/health-charts/index"
     ],
     "window": {
         "navigationBarBackgroundColor": "#F7F8FA",
