refactor: 移除健康指标趋势页面及相关代码
清理不再使用的健康指标趋势功能页面，包括wxml、wxss、js和json文件
从app.json中移除对应的页面路径配置

--- a/app.json
+++ b/app.json
@@ -5,8 +5,7 @@
         "pages/meds/index",
         "pages/checkups/index",
         "pages/expense/index",
-        "pages/stats/index",
-        "pages/health-charts/index"
+        "pages/stats/index"
     ],
     "window": {
         "navigationBarBackgroundColor": "#F7F8FA",
