--- a/app.json
+++ b/app.json
@@ -2,10 +2,10 @@
     "lazyCodeLoading": "requiredComponents",
     "pages": [
         "pages/index/index",
-        "pages/meds/index",
+        "pages/medicine/index",
         "pages/checkups/index",
         "pages/expense/index",
-        "pages/stats/index"
+        "pages/statistics/index"
     ],
     "window": {
         "navigationBarBackgroundColor": "#F7F8FA",
@@ -35,7 +35,7 @@
                 "text": "体检"
             },
             {
-                "pagePath": "pages/meds/index",
+                "pagePath": "pages/medicine/index",
                 "iconPath": "images/icons/meds.png",
                 "selectedIconPath": "images/icons/meds-active.png",
                 "text": "服药"
@@ -47,7 +47,7 @@
                 "text": "费用"
             },
             {
-                "pagePath": "pages/stats/index",
+                "pagePath": "pages/statistics/index",
                 "iconPath": "images/icons/stats.png",
                 "selectedIconPath": "images/icons/stats-active.png",
                 "text": "统计"
