--- a/project.config.json
+++ b/project.config.json
@@ -1,5 +1,6 @@
 {
     "miniprogramRoot": "./",
+    "cloudfunctionRoot": "cloudfunctions/",
     "compileType": "miniprogram",
     "setting": {
         "urlCheck": true,
