--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
     "lazyCodeLoading": "requiredComponents",
     "pages": [
         "pages/index/index",
+        "pages/indicator-form/index",
         "pages/medicine/index",
         "pages/statistics/index"
     ],
