feat(表单): 重构并增强健康记录表单页面
将 indicator-form 重命名为 index-form 并全面改进表单功能
- 新增提示信息卡片和最近记录预览区域
- 优化表单样式和交互体验
- 添加日期验证和本地存储功能
- 移除不必要的时间选择器

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "lazyCodeLoading": "requiredComponents",
     "pages": [
         "pages/index/index",
-        "pages/indicator-form/index",
+        "pages/index-form/index",
         "pages/medicine/index",
         "pages/statistics/index"
     ],
