feat(用户): 新增用户授权与个人中心功能
- 添加用户授权登录功能，支持微信头像与昵称获取
- 实现用户资料云存储与本地缓存管理
- 新增个人中心页面展示用户信息与登录状态
- 更新云函数配置与依赖版本
- 移除无用健康指标工具类
- 优化悬浮按钮组件避免原生组件限制

--- a/app.json
+++ b/app.json
@@ -1,10 +1,11 @@
 {
-    "lazyCodeLoading": "requiredComponents",
+
     "pages": [
         "pages/index/index",
         "pages/index-form/index",
         "pages/medicine/index",
-        "pages/statistics/index"
+        "pages/statistics/index",
+        "pages/me/index"
     ],
     "window": {
         "navigationBarBackgroundColor": "#F7F8FA",
@@ -38,6 +39,12 @@
                 "iconPath": "images/icons/stats.png",
                 "selectedIconPath": "images/icons/stats-active.png",
                 "text": "统计"
+            },
+            {
+                "pagePath": "pages/me/index",
+                "iconPath": "images/icons/expense.png",
+                "selectedIconPath": "images/icons/expense-active.png",
+                "text": "我的"
             }
         ]
     },
