feat(me): 重构用户资料页面并添加表单交互
重构用户资料页面布局，将头部信息改为卡片式设计
添加显示/隐藏资料表单的交互逻辑，优化未登录状态下的用户体验
新增滚动至资料卡片功能，完善样式细节

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,3 +1,7 @@
 {
-    "libVersion": "3.10.3"
+    "libVersion": "3.10.3",
+    "setting": {
+        "compileHotReLoad": false,
+        "preloadBackgroundData": false
+    }
 }
