style: 更新主题颜色为紫色系
将选中的标签栏颜色和首页按钮渐变背景色调整为紫色系，以统一视觉风格

--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
     },
     "tabBar": {
         "color": "#6B7280",
-        "selectedColor": "#2563EB",
+        "selectedColor": "#4F46E5",
         "backgroundColor": "#FFFFFF",
         "borderStyle": "white",
         "list": [
